@@ -13,6 +13,7 @@ Version 1.9.0-svn:
    * Enable the hidden join observe buttons per row
    * New option to auto-set delay shroud update on game start
    * better fix for bug 14765 now that string freeze is off
+   * Added a way to rename local players at game creation
 
 Version 1.8.0:
  * AI:
